Add friends, likes, services, storage and REST endpoints